--- a/app/src/main/res/layout/activity_task_detail.xml
+++ b/app/src/main/res/layout/activity_task_detail.xml
@@ -17,7 +17,7 @@
         tools:layout_editor_absoluteY="65dp" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/taskDetailActivityBody"
         android:layout_width="311dp"
         android:layout_height="90dp"
         android:layout_marginStart="48dp"
