--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -12,13 +12,21 @@
         android:layout_height="32dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="30dp"
-        android:text="@string/fragmentTitle" />
+        android:fontFamily="sans-serif-smallcaps"
+        android:text="@string/fragmentTitle"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        tools:textStyle="bold" />
 
     <TextView
         android:id="@+id/tasksFragmentTextViewBody"
-        android:layout_width="64dp"
+        android:layout_width="138dp"
         android:layout_height="32dp"
         android:layout_marginStart="180dp"
         android:layout_marginTop="30dp"
-        android:text="@string/fragmentBody" />
+        android:fontFamily="sans-serif-smallcaps"
+        android:text="@string/fragmentBody"
+        android:textColor="@color/black"
+        android:textSize="24sp"
+        tools:textStyle="bold" />
 </FrameLayout>
