--- a/app/src/main/res/layout/activity_all_tasks.xml
+++ b/app/src/main/res/layout/activity_all_tasks.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/allTasksActivityRecyclerViewTasks"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.AllTasksActivity">
@@ -10,12 +11,21 @@
         android:id="@+id/allTasksTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="48dp"
         android:text="@string/allTasksTitle"
         android:textColor="@color/black"
         android:textSize="32sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+<!--    <androidx.recyclerview.widget.RecyclerView-->
+<!--        android:id="@+id/allTaskActivityRecyclerViewTasks"-->
+<!--        android:layout_width="365dp"-->
+<!--        android:layout_height="538dp"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginBottom="72dp"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent" />-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
