--- a/app/src/main/res/layout/activity_task_detail.xml
+++ b/app/src/main/res/layout/activity_task_detail.xml
@@ -10,19 +10,32 @@
         android:id="@+id/taskDetailActivityTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="124dp"
+        android:layout_marginTop="68dp"
         android:text="@string/taskDetailTitle"
         android:textColor="@android:color/black"
         android:textSize="32sp"
-        tools:layout_editor_absoluteX="43dp"
-        tools:layout_editor_absoluteY="65dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/taskDetailActivityBody"
         android:layout_width="311dp"
         android:layout_height="90dp"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="260dp"
+        android:layout_marginTop="184dp"
         android:text="et tortor at risus viverra adipiscing at in tellus integer feugiat scelerisque varius morbi enim nunc faucibus a pellentesque sit amet porttitor eget dolor morbi"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/taskDetailActivityStatus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="184dp"
+        android:layout_marginTop="128dp"
+        android:text="@string/taskDetailStatus"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
