--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -1,17 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout"
-    android:layout_width="320dp"
+    android:id="@+id/frameLayoutTitleStatus"
+    android:layout_width="400dp"
     android:layout_height="64dp"
-    tools:context=".fragments.taskFragment">
+    android:layout_marginStart="5dp"
+    android:layout_marginTop="20dp"
+    android:background="@android:color/holo_blue_dark"
+    tools:context=".fragments.taskFragmentTitleStatus">
+
+    <!--    <TextView-->
+    <!--        android:id="@+id/tasksFragmentTextViewBody"-->
+    <!--        android:layout_width="138dp"-->
+    <!--        android:layout_height="32dp"-->
+    <!--        android:layout_marginStart="100dp"-->
+    <!--        android:layout_marginTop="30dp"-->
+    <!--        android:fontFamily="sans-serif-smallcaps"-->
+    <!--        android:text="@string/fragmentBody"-->
+    <!--        android:textColor="@color/black"-->
+    <!--        android:textSize="24sp"-->
+    <!--        tools:textStyle="bold" />-->
 
     <TextView
         android:id="@+id/tasksFragmentTextViewTitle"
-        android:layout_width="64dp"
+        android:layout_width="wrap_content"
         android:layout_height="32dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="15dp"
         android:fontFamily="sans-serif-smallcaps"
         android:text="@string/fragmentTitle"
         android:textColor="@color/black"
@@ -19,13 +34,13 @@
         tools:textStyle="bold" />
 
     <TextView
-        android:id="@+id/tasksFragmentTextViewBody"
-        android:layout_width="138dp"
+        android:id="@+id/tasksFragmentTextViewStatus"
+        android:layout_width="wrap_content"
         android:layout_height="32dp"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginStart="200dp"
+        android:layout_marginTop="15dp"
         android:fontFamily="sans-serif-smallcaps"
-        android:text="@string/fragmentBody"
+        android:text="@string/taskFragStatus"
         android:textColor="@color/black"
         android:textSize="24sp"
         tools:textStyle="bold" />
