--- a/app/src/main/res/layout/activity_all_tasks.xml
+++ b/app/src/main/res/layout/activity_all_tasks.xml
@@ -19,13 +19,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:id="@+id/allTaskActivityRecyclerViewTasks"-->
-<!--        android:layout_width="365dp"-->
-<!--        android:layout_height="538dp"-->
-<!--        android:layout_marginStart="20dp"-->
-<!--        android:layout_marginBottom="72dp"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent" />-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/allTaskActivityRecyclerViewTasks"
+        android:layout_width="365dp"
+        android:layout_height="538dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="72dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
